HW/error for parser
cc -o part1 parser.tab.c lex.yy.c -ll
parser.tab.c: In function ‘yyparse’:
parser.tab.c:1183:16: warning: implicit declaration of function ‘yylex’ [-Wimplicit-function-declaration]
 1183 |       yychar = yylex ();
      |                ^~~~~
In file included from parser.y:186:
scanner.l: At top level:
scanner.l:12:10: error: conflicting types for ‘mknode’; have ‘ASTNode *(char *, ASTNode *, ASTNode *)’ {aka ‘struct ast_node *(char *, struct ast_node *, struct ast_node *)’}
   12 | ASTNode *mknode(char *token, ASTNode *left, ASTNode *right) {
      |          ^~~~~~
parser.y:12:7: note: previous declaration of ‘mknode’ with type ‘node *(char *, node *, node *)’
   12 | node *mknode(char *token, node *left, node *right);
      |       ^~~~~~
scanner.l: In function ‘yylex’:
scanner.l:65:9: error: ‘yylval’ is a pointer; did you mean to use ‘->’?
   65 | [0-9]+      { yylval.node = mknode(yytext, NULL, NULL); return INT_LIT; }
      |         ^
      |         ->
scanner.l:66:9: error: ‘yylval’ is a pointer; did you mean to use ‘->’?
   66 | \"([^\\\"]|\\.)*\"   { yylval.node = mknode(yytext, NULL, NULL); return STRING_LIT; }
      |         ^
      |         ->
scanner.l:67:9: error: ‘yylval’ is a pointer; did you mean to use ‘->’?
   67 | \'[^\']\'   { yylval.node = mknode(yytext, NULL, NULL); return CHAR_LIT; }
      |         ^
      |         ->
scanner.l:69:9: error: ‘yylval’ is a pointer; did you mean to use ‘->’?
   69 | [a-zA-Z_][a-zA-Z0-9_]* { yylval.node = mknode(yytext, NULL, NULL); return ID; }
      |         ^
      |         ->
scanner.l: At top level:
lex.yy.c:326:32: error: expected identifier or ‘(’ before numeric constant
  326 | #define yywrap() (/*CONSTCOND*/1)
      |                                ^
scanner.l:86:5: note: in expansion of macro ‘yywrap’
   86 | int yywrap() {
      |     ^~~~~~
scanner.l: In function ‘yylex’:
scanner.l:65:9: error: request for member ‘node’ in something not a structure or union
   65 | [0-9]+      { yylval.node = mknode(yytext, NULL, NULL); return INT_LIT; }
      |         ^
scanner.l:66:9: error: request for member ‘node’ in something not a structure or union
   66 | \"([^\\\"]|\\.)*\"   { yylval.node = mknode(yytext, NULL, NULL); return STRING_LIT; }
      |         ^
scanner.l:67:9: error: request for member ‘node’ in something not a structure or union
   67 | \'[^\']\'   { yylval.node = mknode(yytext, NULL, NULL); return CHAR_LIT; }
      |         ^
scanner.l:69:9: error: request for member ‘node’ in something not a structure or union
   69 | [a-zA-Z_][a-zA-Z0-9_]* { yylval.node = mknode(yytext, NULL, NULL); return ID; }
      |         ^
scanner.l: At top level:
lex.yy.c:326:32: error: expected identifier or ‘(’ before numeric constant
  326 | #define yywrap() (/*CONSTCOND*/1)
      |                                ^
scanner.l:86:5: note: in expansion of macro ‘yywrap’
   86 | int yywrap() {
      |     ^~~~~~
